<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ContentDescription"
        app:cardCornerRadius="6dp">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite">

        <LinearLayout
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center"
                android:background="@color/colorWhite">

            <TextView
                    android:id="@+id/heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/zILokasi"
                    android:textColor="@color/colorElectromagnetic"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/imgV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="8dp"
                android:layout_below="@id/info">

            <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:src="@drawable/map_marker_outline"
                    android:scaleType="fitCenter"/>

        </LinearLayout>

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="14dp"
                android:layout_toEndOf="@id/imgV"
                android:layout_below="@id/info">

            <TextView
                    android:id="@+id/tTle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginEnd="5dp"
                    android:textColor="#000"
                    android:text="@string/zKec"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/tAlt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="2dp"
                    android:textColor="#000"
                    android:text="@string/zAlt"
                    android:layout_below="@id/tTle"
                    android:textSize="14sp"/>

        </RelativeLayout>

        <Button
                android:id="@+id/bLap"
                android:layout_below="@+id/imgV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/zLapor"
                android:textColor="@color/colorWhite"
                android:background="@drawable/ripple_main"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>
