<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="650dp"
            android:background="@color/colorWhite">

        <android.support.v7.widget.Toolbar
                android:id="@+id/tBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:minHeight="?attr/actionBarSize"
                app:title="@string/zTLap"
                app:titleMarginStart="62dp"
                app:titleTextAppearance="@style/TextAppearance.AppCompat.Body3"
                app:navigationIcon="@drawable/arrow_left" />

        <LinearLayout
                android:id="@+id/imgV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="8dp"
                android:layout_below="@id/tBar">

            <ImageView
                    android:id="@+id/vImg"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:scaleType="fitCenter"
                    tools:ignore="ContentDescription"/>

        </LinearLayout>

        <RelativeLayout
                android:id="@+id/isi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="14dp"
                android:layout_toEndOf="@id/imgV"
                android:layout_below="@id/tBar">

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/ikec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/back"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="3dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="3dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                <TextView
                        android:id="@+id/tJns"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/zJenis"
                        android:textSize="15sp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ikec"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="5dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="3dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:background="@drawable/back">

                <EditText
                        android:id="@+id/tKet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/zKet"
                        android:textSize="15sp"/>

            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

        <Button
                android:id="@+id/bRep"
                android:layout_below="@+id/imgV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/zLapor"
                android:textColor="@color/colorWhite"
                android:background="@drawable/ripple_main"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>
